src/scss/footer.scss
@use 'base/variables' as vars;
@use 'base/breakpoints' as bp;

.footer {
  background: vars.$black;
  position: relative;
  width: 100%;
  z-index: 2;

  .footer-inner {
    margin: 0 auto;
    padding: 4rem 0;
  }

  .footer-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0 auto;
    max-width: 96rem;
    width: calc(100% - 4rem);

    > div {
      text-align: center;
      width: 100%;

      @include bp.breakpoint(sm) {
        width: calc(50% - .75rem);
      }

      @include bp.breakpoint(md) {
        width: calc(33.333% - 1rem);
      }
    }

    .footer-content-skills {
      margin-top: 3rem;

      @include bp.breakpoint(sm) {
        margin-top: 0;
      }
    }

    .footer-content-clients {    

      p {
        margin: 0 auto;
        max-width: 25rem;

        @include bp.breakpoint(md) {
          margin: 0;
          max-width: 100%;
        }
      }
    }

    .footer-content-locations {
      margin-top: 3rem;

      @include bp.breakpoint(sm) {
        margin-top: 5rem;
        width: 100%;
      }

      @include bp.breakpoint(md) {
        margin-top: 0;
        width: calc(33.333% - 3rem);
      }
    }
  }

  .heading-lg {
    text-align: center;
  }

  .heading-sm {
    color: vars.$primary-color;
  }

  .flag-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1rem;
    max-width: 30rem;

    @include bp.breakpoint(sm) {
      max-width: 50rem;
    }

    @include bp.breakpoint(md) {
      max-width: 100%;
    }

    > a {
      position: relative;
      transform: rotate(0);

      img {
        height: auto;
        width: 100%;

        @include bp.breakpoint(sm) {
          height: 100%;
          width: auto;
        }

        @include bp.breakpoint(md) {
          height: auto;
          width: 100%;
        }
      }

      @include bp.breakpoint(sm) {
        transform: rotate(-90deg);
      }

      @include bp.breakpoint(md) {
        transform: rotate(0);
      }

      .hover-img {
        left: 0;
        opacity: 0;
        position: absolute;
        top: 0;
        transition: opacity .2s linear;
      }

      &:hover {

        .hover-img {
          opacity: 1;
        }
      }
    }

    .oh-flag {
      max-width: 7.5rem;
      width: calc(36.6% - 1.5rem);

      @include bp.breakpoint(sm) {
        max-width: 100%;
        width: auto;
      }

      @include bp.breakpoint(md) {
        max-width: 7.5rem;
        width: calc(36.6% - 1.5rem);
      }
    }

    .chi-flag,
    .az-flag {
      max-width: 6.5rem;
      width: calc(31.7% - 1.5rem);

      @include bp.breakpoint(sm) {
        max-width: 100%;
        width: auto;
      }

      @include bp.breakpoint(md) {
        max-width: 6.5rem;
        width: calc(31.7% - 1.5rem);
      }
    }

    .current {
      position: relative;

      &::after {
        background-color: vars.$primary-color;
        bottom: 0;
        content: '';
        height: .3rem;
        left: 0;
        position: absolute;
        width: 100%;

        @include bp.breakpoint(sm) {
          bottom: auto;
          height: 100%;
          left: -1.5rem;
          top: 0;
          width: .3rem;
        }

        @include bp.breakpoint(md) {
          bottom: 0;
          height: .3rem;
          left: 0;
          top: auto;
          width: 100%;
        }
      }
    }
  }

  .social-nav {
    display: flex;
    flex-direction: row;
    margin: 5rem auto 0;
    max-width: 30rem;
    width: 100%;

    li {
      display: block;
      height: 0;
      overflow: hidden;
      padding-top: 25%;
      position: relative;
      width: 25%;

      a {
        background-position: center;
        background-repeat: no-repeat;
        background-size: 2.4rem 2.4rem;
        height: 0;
        overflow: hidden;
        padding-top: 100%;
        position: absolute;
        top: 0;
        width: 100%;

        &::before {
          background-color: vars.$primary-color;
          bottom: 0;
          content: '';
          height: .3rem;
          position: absolute;
          transform: scaleY(0);
          transition: transform .2s linear;
          width: 100%;
          will-change: transform;
        }

        &:hover::before,
        &:focus::before {
          transform: scaleY(1);
        }
      }

      .strava-link {
        background-size: 2.7rem 4rem;
      }

      .zwift-link {
        background-size: 2.6rem 2.5rem;
      }
    }
  }

  li.copyright-content {
    width: 33%;

    span {
      color: vars.$primary-color;
      font-size: 2.4rem;
      font-weight: bold;
      left: 0;
      padding: .5rem 0;
      position: absolute;
      top: 0;
    }
  }
}

